--- a/src/lightviz/CMakeLists.txt
+++ b/src/lightviz/CMakeLists.txt
@@ -30,7 +30,8 @@ set(ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 ## Dependency libraries
-# Eigen3
+find_package(OpenCV REQUIRED)
+
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
@@ -40,22 +41,14 @@ include_directories(${FLTK_INCLUDE_DIR})
 find_package(Cairo REQUIRED)
 include_directories(${CAIRO_INCLUDE_DIRS})
 
-# find_package(X11 REQUIRED)
-# include_directories(${X11_INCLUDE_DIR})
-
-# find_package(GLFW REQUIRED)
-# include_directories(${GLFW_INCLUDE_DIR})
-
-# find_package(OpenGL REQUIRED)
-# include_directories(${OPENGL_INCLUDE_DIR})
-
 ## Add libraries
 # LightViz library
 set(LIGHTVIZ_LIB_SRC
 	src/lightgui.cpp
+	src/image_viz.cpp
 )
 add_library(lightviz STATIC ${LIGHTVIZ_LIB_SRC})
-target_link_libraries(lightviz ${FLTK_LIBRARIES} )
+target_link_libraries(lightviz ${FLTK_LIBRARIES} ${OpenCV_LIBS})
 target_include_directories(lightviz PUBLIC
 	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 	$<INSTALL_INTERFACE:include>	
