--- a/src/lightviz/CMakeLists.txt
+++ b/src/lightviz/CMakeLists.txt
@@ -44,8 +44,8 @@ include_directories(${CAIRO_INCLUDE_DIRS})
 ## Add libraries
 # LightViz library
 set(LIGHTVIZ_LIB_SRC
-	src/lightgui.cpp
-	src/image_viz.cpp
+	src/cv_draw.cpp
+	src/matrix_viz.cpp
 )
 add_library(lightviz STATIC ${LIGHTVIZ_LIB_SRC})
 target_link_libraries(lightviz ${FLTK_LIBRARIES} ${OpenCV_LIBS})
