--- a/src/planning/CMakeLists.txt
+++ b/src/planning/CMakeLists.txt
@@ -51,6 +51,7 @@ add_subdirectory(libgraph)
 add_subdirectory(geometry)
 add_subdirectory(planner)
 add_subdirectory(field)
+add_subdirectory(decomp)
 add_subdirectory(behavior)
 add_subdirectory(reachability)
 add_subdirectory(map)
