--- a/src/planning/decomp/tests/CMakeLists.txt
+++ b/src/planning/decomp/tests/CMakeLists.txt
@@ -8,3 +8,6 @@ include_directories(${CMAKE_SOURCE_DIR}/src)
 ## tests
 add_executable(test_grid_base test_grid_base.cpp)
 target_link_libraries(test_grid_base decomp)
+
+add_executable(test_newgrid test_newgrid.cpp)
+target_link_libraries(test_newgrid decomp)
