new square grid works

--- a/src/lightviz/CMakeLists.txt
+++ b/src/lightviz/CMakeLists.txt
@@ -46,9 +46,10 @@ include_directories(${CAIRO_INCLUDE_DIRS})
 set(LIGHTVIZ_LIB_SRC
 	src/cv_draw.cpp
 	src/matrix_viz.cpp
+	src/grid_viz.cpp
 )
 add_library(lightviz STATIC ${LIGHTVIZ_LIB_SRC})
-target_link_libraries(lightviz ${FLTK_LIBRARIES} ${OpenCV_LIBS})
+target_link_libraries(lightviz decomp ${FLTK_LIBRARIES} ${OpenCV_LIBS})
 target_include_directories(lightviz PUBLIC
 	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 	$<INSTALL_INTERFACE:include>	
