--- a/src/planning/decomp/CMakeLists.txt
+++ b/src/planning/decomp/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 # Add libraries
 set(DECOMP_LIB_SRC
   src/square_grid.cpp
+  src/dense_grid.cpp
 )
 add_library(decomp STATIC ${DECOMP_LIB_SRC})
 target_link_libraries(decomp common)
