--- a/src/planning/decomp/tests/CMakeLists.txt
+++ b/src/planning/decomp/tests/CMakeLists.txt
@@ -11,3 +11,6 @@ target_link_libraries(test_grid_base decomp)
 
 add_executable(test_newgrid test_newgrid.cpp)
 target_link_libraries(test_newgrid decomp)
+
+add_executable(test_dense_grid test_dense_grid.cpp)
+target_link_libraries(test_dense_grid decomp lightviz)
