--- a/src/planning/CMakeLists.txt
+++ b/src/planning/CMakeLists.txt
@@ -37,15 +37,6 @@ endif(LCM_NOT_FOUND)
 set(LCM_GENERATED_HEADER_PATH ${CMAKE_BINARY_DIR}/include)
 include_directories(${LCM_GENERATED_HEADER_PATH})
 
-## Find Gurobi
-find_package(GUROBI QUIET)
-if (NOT GUROBI_FOUND)
-  message("-- Gurobi not found. Trajectory generation will not be built. Make sure you have set the GUROBI_HOME variable")
-else()
-  message("-- Gurobi found")
-  include_directories(${GUROBI_INCLUDE_DIRS})
-endif()
-
 ## Add other sub source directories
 add_subdirectory(libgraph)
 add_subdirectory(geometry)
@@ -55,7 +46,6 @@ add_subdirectory(decomp)
 add_subdirectory(behavior)
 add_subdirectory(reachability)
 add_subdirectory(map)
-if (GUROBI_FOUND)
+add_subdirectory(road)
 add_subdirectory(polyopt)
-endif()
 
