--- a/src/platforms/quadrotor/CMakeLists.txt
+++ b/src/platforms/quadrotor/CMakeLists.txt
@@ -37,9 +37,8 @@ include_directories(${LCM_GENERATED_HEADER_PATH})
 add_subdirectory(apps)
 add_subdirectory(control)
 add_subdirectory(system)
+add_subdirectory(trajectory)
+
 # !!! path repair and relevant experiments are broken !!!
 # add_subdirectory(expts)
 # add_subdirectory(path_repair)
-
-# Tests
-# add_subdirectory(tests)
