--- a/src/platforms/quadrotor/path_repair/tests/CMakeLists.txt
+++ b/src/platforms/quadrotor/path_repair/tests/CMakeLists.txt
@@ -7,11 +7,11 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 #find_package(LIBRARY_NAME REQUIRED)
 
 # Add executables
-add_executable(test_map_request test_map_request.cpp)
-target_link_libraries(test_map_request geometry map vis ${LCM_LIBRARIES})
+# add_executable(test_map_request test_map_request.cpp)
+# target_link_libraries(test_map_request geometry map vis ${LCM_LIBRARIES})
 
-add_executable(test_sim_sensor test_sim_sensor.cpp)
-target_link_libraries(test_sim_sensor pr_sim geometry)
+# add_executable(test_sim_sensor test_sim_sensor.cpp)
+# target_link_libraries(test_sim_sensor pr_sim geometry)
 
 #add_executable(graph_combine_exp tests/graph_combine_exp.cpp)
 #target_link_libraries(graph_combine_exp map utils ${Octomap_LIBS} ${LCM_LIBRARIES})
