--- a/src/planning/polyopt/CMakeLists.txt
+++ b/src/planning/polyopt/CMakeLists.txt
@@ -18,7 +18,7 @@ set(POLYOPT_LIB_SRC
     src/gurobi_solver/gurobi_polyopt.cpp
 )
 add_library(polyopt STATIC ${POLYOPT_LIB_SRC})
-target_link_libraries(polyopt common ${GUROBI_LIBRARIES})
+target_link_libraries(polyopt common gurobi_cpp ${GUROBI_LIBRARIES})
 target_include_directories(polyopt PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
