--- a/src/planning/road_network/tests/CMakeLists.txt
+++ b/src/planning/road_network/tests/CMakeLists.txt
@@ -11,3 +11,6 @@ target_link_libraries(lanelet_demo lanelet)
 
 add_executable(lanelet_test lanelet_test.cpp)
 target_link_libraries(lanelet_test lanelet)
+
+add_executable(test_roadmap test_roadmap.cpp)
+target_link_libraries(test_roadmap road)
