square grid decomposition works on road map

--- a/src/planning/decomp/CMakeLists.txt
+++ b/src/planning/decomp/CMakeLists.txt
@@ -8,6 +8,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 set(DECOMP_LIB_SRC
   src/square_grid.cpp
   src/dense_grid.cpp
+  src/grid_decomposer.cpp
 )
 add_library(decomp STATIC ${DECOMP_LIB_SRC})
 target_link_libraries(decomp common)
