--- a/src/planning/decomp/tests/CMakeLists.txt
+++ b/src/planning/decomp/tests/CMakeLists.txt
@@ -14,3 +14,6 @@ target_link_libraries(test_newgrid decomp)
 
 add_executable(test_dense_grid test_dense_grid.cpp)
 target_link_libraries(test_dense_grid decomp lightviz)
+
+add_executable(test_decomposer test_decomposer.cpp)
+target_link_libraries(test_decomposer decomp lightviz)
