--- a/src/platforms/generic_car/navigation/tests/CMakeLists.txt
+++ b/src/platforms/generic_car/navigation/tests/CMakeLists.txt
@@ -9,3 +9,6 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 # Add executables
 add_executable(test_cfield_search test_cfield_search.cpp)
 target_link_libraries(test_cfield_search nav field fastplot utilities)
+
+add_executable(test_rmap_search test_rmap_search.cpp)
+target_link_libraries(test_rmap_search nav decomp road lightviz utilities)
