started working on reference point support of liblanet

--- a/src/platforms/generic_car/navigation/tests/CMakeLists.txt
+++ b/src/platforms/generic_car/navigation/tests/CMakeLists.txt
@@ -12,3 +12,6 @@ target_link_libraries(test_cfield_search nav field fastplot utilities)
 
 add_executable(test_rmap_search test_rmap_search.cpp)
 target_link_libraries(test_rmap_search nav decomp road lightviz utilities)
+
+add_executable(test_traffic_flow test_traffic_flow.cpp)
+target_link_libraries(test_traffic_flow nav decomp road lightviz utilities)
