--- a/src/planning/road_network/tests/CMakeLists.txt
+++ b/src/planning/road_network/tests/CMakeLists.txt
@@ -12,6 +12,9 @@ target_link_libraries(lanelet_demo lanelet)
 add_executable(lanelet_test lanelet_test.cpp)
 target_link_libraries(lanelet_test lanelet)
 
+add_executable(test_lanelet_ref test_lanelet_ref.cpp)
+target_link_libraries(test_lanelet_ref lanelet)
+
 add_executable(test_roadmap test_roadmap.cpp)
 target_link_libraries(test_roadmap road lightviz utilities)
 
