--- a/src/planning/planner/CMakeLists.txt
+++ b/src/planning/planner/CMakeLists.txt
@@ -10,7 +10,7 @@ set(GEOMETRY_LIB_SRC
   src/graph_builder.cpp
 )
 add_library(planner STATIC ${GEOMETRY_LIB_SRC})
-target_link_libraries(planner graph geometry)
+target_link_libraries(planner graph decomp)
 target_include_directories(planner PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
