--- a/src/platforms/generic_car/navigation/tests/CMakeLists.txt
+++ b/src/platforms/generic_car/navigation/tests/CMakeLists.txt
@@ -15,3 +15,6 @@ target_link_libraries(test_rmap_search nav decomp road lightviz utilities)
 
 add_executable(test_traffic_flow test_traffic_flow.cpp)
 target_link_libraries(test_traffic_flow nav decomp road lightviz utilities)
+
+add_executable(test_isodist test_isodistance.cpp)
+target_link_libraries(test_isodist nav decomp road lightviz utilities)
