--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8.11)
+cmake_minimum_required(VERSION 3.0.0)
 project(librav_core)
 
 ## Add sub source directories
@@ -10,4 +10,4 @@ add_subdirectory(planning)
 add_subdirectory(vehicle_nav)
 
 add_subdirectory(visualization/lightviz)
-add_subdirectory(visualization/cinder)
+# add_subdirectory(visualization/cinder)
