--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,7 +70,10 @@
         "cinttypes": "cpp",
         "deque": "cpp",
         "list": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "forward_list": "cpp",
+        "filesystem": "cpp",
+        "numeric": "cpp"
     },
     "git.ignoreLimitWarning": true
 }
