--- a/src/core/vehicle_nav/CMakeLists.txt
+++ b/src/core/vehicle_nav/CMakeLists.txt
@@ -40,9 +40,9 @@ set(LCM_GENERATED_HEADER_PATH ${CMAKE_BINARY_DIR}/include)
 include_directories(${LCM_GENERATED_HEADER_PATH})
 
 ## Add other sub source directories
-add_subdirectory(field)
 add_subdirectory(behavior)
 add_subdirectory(traffic_flow)
+add_subdirectory(threat_field)
 add_subdirectory(reachability)
 add_subdirectory(road_network)
 add_subdirectory(traffic_sim)
