--- a/src/core/vehicle_nav/road_network/CMakeLists.txt
+++ b/src/core/vehicle_nav/road_network/CMakeLists.txt
@@ -14,7 +14,10 @@ target_include_directories(road PUBLIC
     $<INSTALL_INTERFACE:include>
     PRIVATE src)
 
-add_subdirectory(tests)
+
+if(BUILD_TESTS)
+    add_subdirectory(tests)
+endif()
 
 # TEMPLATE, TO BE UPDATED
 # # 'make install' to the correct locations (provided by GNUInstallDirs).
