--- a/src/core/planning/map/CMakeLists.txt
+++ b/src/core/planning/map/CMakeLists.txt
@@ -20,5 +20,6 @@ target_include_directories(map PUBLIC
   $<INSTALL_INTERFACE:include>
   PRIVATE src)
 
-add_subdirectory(tests)
-
+if(BUILD_TESTS)
+  add_subdirectory(tests)
+endif()
