--- a/src/core/planning/polyopt/CMakeLists.txt
+++ b/src/core/planning/polyopt/CMakeLists.txt
@@ -24,4 +24,6 @@ target_include_directories(polyopt PUBLIC
 endif()
 
 # Add executables
-add_subdirectory(tests)
+if(BUILD_TESTS)
+  add_subdirectory(tests)
+endif()
