--- a/src/core/vehicle_nav/reachability/CMakeLists.txt
+++ b/src/core/vehicle_nav/reachability/CMakeLists.txt
@@ -16,5 +16,6 @@ target_include_directories(reachability PUBLIC
   $<INSTALL_INTERFACE:include>
   PRIVATE src)
 
-add_subdirectory(tests)
-
+if(BUILD_TESTS)
+  add_subdirectory(tests)
+endif()
