--- a/src/core/vehicle_nav/CMakeLists.txt
+++ b/src/core/vehicle_nav/CMakeLists.txt
@@ -43,6 +43,7 @@ include_directories(${LCM_GENERATED_HEADER_PATH})
 add_subdirectory(behavior)
 add_subdirectory(traffic_flow)
 add_subdirectory(threat_field)
+add_subdirectory(threat_ranking)
 add_subdirectory(reachability)
 add_subdirectory(road_network)
 add_subdirectory(traffic_sim)
