--- a/src/core/vehicle_nav/threat_ranking/tests/CMakeLists.txt
+++ b/src/core/vehicle_nav/threat_ranking/tests/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(test_topogeo_graph test_topogeo_graph.cpp)
 target_link_libraries(test_topogeo_graph rank lightviz utilities)
 
 add_executable(test_threat_model test_threat_model.cpp)
-target_link_libraries(test_threat_model road tfield lightviz utilities)
+target_link_libraries(test_threat_model road rank tfield lightviz utilities)
