--- a/src/core/vehicle_nav/state_lattice/tests/CMakeLists.txt
+++ b/src/core/vehicle_nav/state_lattice/tests/CMakeLists.txt
@@ -7,3 +7,6 @@ target_link_libraries(test_lattice_gen lattice)
 
 add_executable(test_lattice_manager test_lattice_manager.cpp)
 target_link_libraries(test_lattice_manager lattice)
+
+add_executable(test_lattice_planner test_lattice_planner.cpp)
+target_link_libraries(test_lattice_planner lattice)
