--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,7 +74,8 @@
         "forward_list": "cpp",
         "filesystem": "cpp",
         "numeric": "cpp",
-        "queue": "cpp"
+        "queue": "cpp",
+        "cassert": "cpp"
     },
     "git.ignoreLimitWarning": true
 }
