updated road map to use polygons instead of images

--- a/src/core/planning/CMakeLists.txt
+++ b/src/core/planning/CMakeLists.txt
@@ -43,4 +43,4 @@ add_subdirectory(geometry)
 add_subdirectory(planner)
 add_subdirectory(polyopt)
 add_subdirectory(polygon)
-add_subdirectory(collision)
+# add_subdirectory(collision)
