--- a/src/core/planning/collision/tests/CMakeLists.txt
+++ b/src/core/planning/collision/tests/CMakeLists.txt
@@ -4,3 +4,6 @@
 ## tests
 add_executable(test_c2 test_c2.cpp)
 target_link_libraries(test_c2 collision)
+
+add_executable(test_checker test_checker.cpp)
+target_link_libraries(test_checker collision)
