--- a/src/core/visualization/lightviz/CMakeLists.txt
+++ b/src/core/visualization/lightviz/CMakeLists.txt
@@ -27,20 +27,23 @@ find_package(OpenCV REQUIRED)
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
-find_package(FLTK REQUIRED)
-include_directories(${FLTK_INCLUDE_DIR})
+# find_package(FLTK REQUIRED)
+# include_directories(${FLTK_INCLUDE_DIR})
 
-find_package(Cairo REQUIRED)
-include_directories(${CAIRO_INCLUDE_DIRS})
+# find_package(Cairo REQUIRED)
+# include_directories(${CAIRO_INCLUDE_DIRS})
 
 ## Add libraries
 # LightViz library
 set(LIGHTVIZ_LIB_SRC
 	src/cv_draw.cpp
+	src/matrix_draw.cpp
+	src/geometry_draw.cpp
 	src/matrix_viz.cpp
+	src/polygon_viz.cpp
 )
 add_library(lightviz STATIC ${LIGHTVIZ_LIB_SRC})
-target_link_libraries(lightviz decomp graph ${OpenCV_LIBS})
+target_link_libraries(lightviz decomp graph polygon ${OpenCV_LIBS})
 target_include_directories(lightviz PUBLIC
 	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
 	$<INSTALL_INTERFACE:include>	
