updated roadmap and viz

--- a/src/core/vehicle_nav/state_lattice/CMakeLists.txt
+++ b/src/core/vehicle_nav/state_lattice/CMakeLists.txt
@@ -4,12 +4,11 @@
 # Add libraries
 set(LATTICE_LIB_SRC
   src/lattice_generator.cpp
-  src/lattice_graph.cpp
   src/lattice_manager.cpp
-  src/lattice_planner.cpp
+  # src/lattice_planner.cpp
 )
 add_library(lattice STATIC ${LATTICE_LIB_SRC})
-target_link_libraries(lattice graph road reachability utilities)
+target_link_libraries(lattice graph reachability utilities)
 target_include_directories(lattice PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
