--- a/src/core/vehicle_nav/lattice_planner/CMakeLists.txt
+++ b/src/core/vehicle_nav/lattice_planner/CMakeLists.txt
@@ -4,13 +4,12 @@
 # Add libraries
 set(LATTICE_PLANNER_LIB_SRC
   src/lattice_graph.cpp
-  src/lattice_manager.cpp
   src/lattice_planner.cpp
 )
-add_library(lattice_plan STATIC ${LATTICE_PLANNER_LIB_SRC})
-target_link_libraries(lattice_plan graph roadmap reachability utilities)
-target_compile_options(lattice_plan PUBLIC "-frounding-math")
-target_include_directories(lattice_plan PUBLIC
+add_library(lattice_planner STATIC ${LATTICE_PLANNER_LIB_SRC})
+target_link_libraries(lattice_planner lattice graph roadmap reachability utilities)
+target_compile_options(lattice_planner PUBLIC "-frounding-math")
+target_include_directories(lattice_planner PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
   $<INSTALL_INTERFACE:include>
   PRIVATE src)
