--- a/src/core/vehicle_nav/lattice_planner/tests/CMakeLists.txt
+++ b/src/core/vehicle_nav/lattice_planner/tests/CMakeLists.txt
@@ -10,7 +10,7 @@
 
 add_executable(test_veh_planner test_lattice_planner.cpp)
 target_compile_options(test_veh_planner PUBLIC "-frounding-math")
-target_link_libraries(test_veh_planner lattice_plan tfield lightviz utilities)
+target_link_libraries(test_veh_planner lattice_planner tfield lightviz utilities)
 
 # add_executable(test_lattice_graph test_lattice_graph.cpp)
 # target_link_libraries(test_lattice_graph lattice)
