--- a/src/core/vehicle_nav/threat_field/CMakeLists.txt
+++ b/src/core/vehicle_nav/threat_field/CMakeLists.txt
@@ -7,10 +7,10 @@ set(TFIELD_LIB_SRC
     src/threat_basis.cpp
     src/threat_distribution.cpp
     src/collision_field.cpp
-    src/threat_projector.cpp
+    # src/threat_projector.cpp
 )
 add_library(tfield STATIC ${TFIELD_LIB_SRC})
-target_link_libraries(tfield decomp graph tflow)
+target_link_libraries(tfield decomp graph)
 target_include_directories(tfield PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
