--- a/src/platforms/quadrotor/path_repair/tests/CMakeLists.txt
+++ b/src/platforms/quadrotor/path_repair/tests/CMakeLists.txt
@@ -3,19 +3,19 @@
 
 # Add executables
 # add_executable(test_map_request test_map_request.cpp)
-# target_link_libraries(test_map_request  map vis ${LCM_LIBRARIES})
+# target_link_libraries(test_map_request  legacy vis ${LCM_LIBRARIES})
 
 # add_executable(test_sim_sensor test_sim_sensor.cpp)
 # target_link_libraries(test_sim_sensor pr_sim )
 
 #add_executable(graph_combine_exp tests/graph_combine_exp.cpp)
-#target_link_libraries(graph_combine_exp map utils ${Octomap_LIBS} ${LCM_LIBRARIES})
+#target_link_libraries(graph_combine_exp legacy utils ${Octomap_LIBS} ${LCM_LIBRARIES})
 
 #add_executable(test_combiner tests/test_combiner.cpp)
-#target_link_libraries(test_combiner map  polyopt g3logger path_repair ${Octomap_LIBS} ${LCM_LIBRARIES})
+#target_link_libraries(test_combiner legacy  polyopt g3logger path_repair ${Octomap_LIBS} ${LCM_LIBRARIES})
 
 #add_executable(test_combinerv2 tests/test_combiner_v2.cpp)
-#target_link_libraries(test_combinerv2 map  polyopt g3logger path_repair ${Octomap_LIBS} ${LCM_LIBRARIES})
+#target_link_libraries(test_combinerv2 legacy  polyopt g3logger path_repair ${Octomap_LIBS} ${LCM_LIBRARIES})
 
 #add_executable(test_tracking tests/test_tracking.cpp)
 #target_link_libraries(test_tracking polyopt ${LCM_LIBRARIES})
@@ -27,22 +27,22 @@
 #target_link_libraries(test_cubearray_builder   ${LCM_LIBRARIES})
 
 #add_executable(graph_combine_exp tests/graph_combine_exp.cpp)
-#target_link_libraries(graph_combine_exp map utils ${Octomap_LIBS} ${LCM_LIBRARIES})
+#target_link_libraries(graph_combine_exp legacy utils ${Octomap_LIBS} ${LCM_LIBRARIES})
 
 #add_executable(test_calc tests/test_calc.cpp)
-#target_link_libraries(test_calc path_repair map vis)
+#target_link_libraries(test_calc path_repair legacy vis)
 
 #add_executable(test_navfield tests/test_navfield.cpp)
-#target_link_libraries(test_navfield map vis)
+#target_link_libraries(test_navfield legacy vis)
 
 #add_executable(test_navfield2 tests/test_navfield2.cpp)
-#target_link_libraries(test_navfield2 map vis path_repair)
+#target_link_libraries(test_navfield2 legacy vis path_repair)
 
 #add_executable(test_navfield3 tests/test_navfield3.cpp)
-#target_link_libraries(test_navfield3 map vis path_repair)
+#target_link_libraries(test_navfield3 legacy vis path_repair)
 
 add_executable(test_navfield4 test_navfield4.cpp)
-target_link_libraries(test_navfield4 pr_sim map vis ${LCM_LIBRARIES})
+target_link_libraries(test_navfield4 pr_sim legacy vis ${LCM_LIBRARIES})
 
 add_executable(test_heading_policy test_heading_policy.cpp)
-target_link_libraries(test_heading_policy map pr_sim vis ${LCM_LIBRARIES})
+target_link_libraries(test_heading_policy legacy pr_sim vis ${LCM_LIBRARIES})
