--- a/src/vehicle_nav/lattice_planner/tests/CMakeLists.txt
+++ b/src/vehicle_nav/lattice_planner/tests/CMakeLists.txt
@@ -8,8 +8,8 @@
 # add_executable(test_lattice_manager test_lattice_manager.cpp)
 # target_link_libraries(test_lattice_manager lattice)
 
-add_executable(test_veh_planner test_lattice_planner.cpp)
-target_link_libraries(test_veh_planner lattice_planner tfield lightviz utilities)
+add_executable(test_lattice_planner test_lattice_planner.cpp)
+target_link_libraries(test_lattice_planner lattice_planner tfield lightviz utilities)
 
 # add_executable(test_lattice_graph test_lattice_graph.cpp)
 # target_link_libraries(test_lattice_graph lattice)
