--- a/src/vehicle_nav/road_map/tests/CMakeLists.txt
+++ b/src/vehicle_nav/road_map/tests/CMakeLists.txt
@@ -2,8 +2,8 @@
 #find_package(LIBRARY_NAME REQUIRED)
 
 ## tests
-add_executable(test_rm test_roadmap.cpp)
-target_link_libraries(test_rm roadmap lightviz utilities)
+add_executable(test_roadmap test_roadmap.cpp)
+target_link_libraries(test_roadmap roadmap lightviz utilities)
 
 add_executable(test_lane_collision test_lane_collision.cpp)
 target_link_libraries(test_lane_collision roadmap lightviz utilities)
